fixes alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@ body {
 
 
 .hello {
-  margin-top: 40px;
+  margin-top: 8px;
 }
 
 .hello h1 {
